--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "start": "node server.js"
+    "crm": "npm start --prefix crm",
+    "start": "concurrently \"npm run server\" \"npm run crm\"",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,8 @@
   },
   "homepage": "https://github.com/COMP30022-2021/TEAM42-CRM#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "concurrently": "^6.2.1",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.12"
   }
 }
