--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
     "crm": "npm start --prefix crm",
-    "start": "concurrently \"npm run server\" \"npm run crm\"",
+    "start": "concurrently \"npm run crm\" \"npm run server\"",
     "server": "nodemon server.js"
   },
   "repository": {
