--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "crm": "npm start --prefix crm",
     "start": "node server",
-    "heroku-postbuild": "cd crm/ && npm install && npm run build",
-    "server": "nodemon server.js"
+    "dev": "concurrently \"npm run server\" \"npm run crm\"",
+    "server": "nodemon server.js",
+    "crm": "npm start --prefix crm"
   },
   "repository": {
     "type": "git",
