feat_zelin: fix deployment add postbuild on heroku
Change-Id: Ia9a1290e5a1d54606aee563939f3db5ffece7c5b

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "start": "node server",
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run crm\"",
     "server": "nodemon server.js",
     "crm": "npm start --prefix crm"
