--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
     "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix crm && npm run build --prefix crm",
     "dev": "concurrently \"npm run server\" \"npm run crm\"",
     "server": "nodemon server.js",
     "crm": "npm start --prefix crm"
