--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.12"
   }
 }
