--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
