--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-sizeme": "^3.0.2"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
