--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "mysql2": "^2.3.0",
+    "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
     "react-icons": "^4.2.0",
     "react-sizeme": "^3.0.2"
