--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       run: |
-        npm install
+        npm ci
         # npx webpack
         npm test
-g
+        npm run build  
