feat_gautams: add test

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,7 +2,7 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main , feat/gautam/tests]
   pull_request:
     branches: [ main ]
 
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [ 14.x ]
     
     steps:
     - uses: actions/checkout@v2
@@ -25,6 +25,9 @@ jobs:
     - name: Build
       run: |
         npm ci
-        # npx webpack
         npm test
-        npm run build  
+      env:
+        MYSQL_HOST: us-cdbr-east-04.cleardb.com
+        MYSQL_USER: b01eb9170bdd13
+        MYSQL_DATABASE: heroku_c2fca39d7a7384f
+        MYSQL_PASSWORD: fd7ba9ac
