--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"no test specified\" && exit 0",
+    "test": "jest --verbose",
     "start": "node server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix crm && npm run build --prefix crm",
     "dev": "concurrently \"npm run server\" \"npm run crm\"",
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "react": "^17.0.2"
+    "jest": "^27.2.3",
+    "react": "^17.0.2",
+    "supertest": "^6.1.6"
   }
 }
