--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,7 +2,7 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main , feat/gautam/tests]
   pull_request:
     branches: [ main ]
 
