--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/COMP30022-2021/TEAM42-CRM#readme",
   "dependencies": {
+    "babel-jest": "^26.6.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
     "cors": "^2.8.5",
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "jest": "^27.2.3",
+    "jest": "^26.6.0",
     "react": "^17.0.2",
     "supertest": "^6.1.6"
   }
