--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^2.3.0",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
+    "react-dropdown": "^1.9.2",
     "react-icons": "^4.2.0",
     "react-sizeme": "^3.0.2"
   },
