--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "mysql2": "^2.3.0",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
+    "prop-types": "^15.7.2",
+    "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-google-charts": "^3.0.15",
     "react-icons": "^4.2.0",
