--- a/crm/package.json
+++ b/crm/package.json
@@ -15,6 +15,7 @@
     "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-loadingg": "^1.7.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
