--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-html-reporter": "^3.4.1",
     "mysql2": "^2.3.0",
     "node-fetch": "^3.0.0",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.12",
     "prop-types": "^15.7.2",
     "react-dom": "^17.0.2",
