--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -31,7 +31,7 @@ jobs:
         MYSQL_USER: b01eb9170bdd13
         MYSQL_DATABASE: heroku_c2fca39d7a7384f
         MYSQL_PASSWORD: fd7ba9ac
-        REDIS_URL: redis://:p8a9a536e37e24dcb479b2badb88bf9dc7808ed53900c90a23d5f3d88519eb8f6@ec2-54-156-199-127.compute-1.amazonaws.com:32020
+        REDIS_TLS_URL: rediss://:p8a9a536e37e24dcb479b2badb88bf9dc7808ed53900c90a23d5f3d88519eb8f6@ec2-3-218-246-62.compute-1.amazonaws.com:29490
         SESSION_SECRET_KEY: team42-crm
         EMAIL_ACCOUNT: lynk.crm@gmail.com 
         EMAIL_PASSWORD: lynklynk
